--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                     <li> Boklot</li>
                     <li>Wanglot</li>
                     <li> lembcabs</li>
+                    <li>Niglot</li>
+                    <li>Mil-mil</li>
+                    <li>HensAps</li>
+                    <li>UncleMedal</li>
                 </ol>
                 <li style="font-weight: bold;">Home </li>
                 <ol><li>
