--- a/index2.html
+++ b/index2.html
@@ -99,11 +99,11 @@
             </ol>
                 <li style="font-weight: bold;">Artist</li>
                 <ol><li>
-                    Arvin 
+                    Leonardo da Vinci
                 </li>
-                <li>Jay</li>
+                <li>Michelangelo</li>
                 <li>
-                    Guno
+                    J.M.W. Turner
                 </li>
             </ol>
             </section>
