--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#Favorites">Favorites</a></li>
         <li><a href="#Friends">Friends</a>
         </li>
+        <li><a href="#index2.html">To:Kilven Jhon Bongco</li>
     </ul>
      </nav>
      <hr>
