--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
         <li><a href="#Favorites">Favorites</a></li>
         <li><a href="#Friends">Friends</a>
         </li>
-         <li><a href="index.html">Back To:Arvin Jay Guno</li>
+         <li><a href="index.html">Back To: Arvin Jay Guno</li>
     </ul>
      </nav>
      <hr>
@@ -137,7 +137,7 @@
         </article> 
     </td>
         <p>
-            Name: Arvin Jay Guno
+            Name: KILVEN JHON BONGCO
         </p>
      </main>
    
